--- a/12thNov2015.html
+++ b/12thNov2015.html
@@ -6,6 +6,7 @@
     <title>Hasin Hayder's Reading List - 12th Oct 2015</title>
     <meta name="description" content="November 12th Reading List by @hasin. A curated list of useful resources and articles by Hasin Hayder.">
     <meta name="keywords" content="freebiez, resources, articles, graphics, inspirations, programming tools, tips, WordPress, PHP, JavaScript">
+    <meta name="og:image" content="https://d13yacurqjgara.cloudfront.net/users/283823/screenshots/2346541/apartment-01.jpg"/>
     <meta name="og:site_name" content="November 12th Reading List by @hasin. A curated list of useful resources and articles."/>
     <meta name="og:title"
           content="November 12th Reading List by @hasin. A curated list of useful resources and articles by Hasin Hayder."/>
